1998-11-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* gui.h: Remove creating phase +in:.  Rename in: and out: to
	lispin: and lispout:.

1998-09-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_Histogram): -setNumBins:, -setLabels:, -setColors:,
	+createBegin:, createEnd: Split out setNumPoints:Labels:Colors:
	into different methods.

1998-09-28  Alex Lancaster  <alex@santafe.edu>

	* gui.h (ScheduleItem): Fixed incorrect documentation markup of
	`Description' entry for protocol.

1998-09-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_Canvas, _Frame): Move Frame's assertGeometry to 
	Canvas as checkGeometry:.

1998-09-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_Canvas): Use addWidget:X:Y:centerFlag: and removeWidget:.

1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_ScheduleItem): Add trigger:X:Y:.
	(_CompleteProbeDisplayLabel): Remove setProbeDisplayManager: and
	rename setProbeDisplay: to setTargetWidget:.

1998-09-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_ScheduleItem): Add at:owner:widget:x:y:.

1998-09-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Circle): Make argument to setRadius: unsigned.
	Provide Circle, Line, ScheduleItem, and TextItem class objects.
	(_ScheduleItem, ScheduleItem): New protocols.
	(_TextItem): Add +createBegin: and setCenterFlag:.

1998-09-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): New method setDecorationsFlag:.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Widget): Declare -getParent and -getTopLevel.
	Revert removal of -getWindowGeometry and -setWindowGeometry:, but don't
	document them.
	(Histogram): Declare setXaxisMin:max:step:precision:.

1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): Add setDirectory:.

1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): Revert create:widget: and create:file: addition