@@ -1,3 +1,8 @@
+1998-11-17  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* gui.h (_WindowGeometryRecord): Adopt Serialization protocol;
+	don't redeclare methods.
+
 1998-11-16  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* gui.h: Remove creating phase +in:.  Rename in: and out: to
